--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "testee": "testee test/test.html --browsers firefox",
     "test": "npm run jshint && npm run testee",
     "jshint": "jshint ./*.js --config",
-    "release:prerelease": "npm version prerelease && npm publish",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
     "build": "node build.js",
     "document": "documentjs",
-    "develop": "done-serve --static --develop --port 8080"
+    "develop": "done-serve --static --develop --port 8080",
+    "release:pre": "npm version prerelease && npm publish"
   },
-  "main": "dist/cjs/can-list",
+  "main": "can-list",
   "browser": {
     "transform": [
       "cssify"
@@ -34,18 +34,14 @@
       "cssify"
     ]
   },
-  "keywords": [],
+  "keywords": [
+    "canjs",
+    "canjs-plugin",
+    "donejs"
+  ],
   "system": {
-    "main": "can-list",
     "configDependencies": [
       "live-reload"
-    ],
-    "npmIgnore": [
-      "documentjs",
-      "testee",
-      "generator-donejs",
-      "donejs-cli",
-      "steal-tools"
     ],
     "npmAlgorithm": "flat"
   },
@@ -54,7 +50,7 @@
     "can-event": "^3.0.0-pre.2",
     "can-map": "^3.0.0-pre.1",
     "can-observe-info": "^3.0.0-pre.1",
-    "can-util": "^3.0.0-pre.2"
+    "can-util": "^3.0.0-pre.21"
   },
   "devDependencies": {
     "documentjs": "^0.4.2",
@@ -67,5 +63,9 @@
     "generator-donejs": "^0.9.0",
     "donejs-cli": "^0.8.0",
     "done-serve": "^0.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/canjs/can-list.git"
   }
 }
