--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "can-construct": "^3.0.0-pre.1",
     "can-event": "^3.0.0-pre.2",
     "can-map": "^3.0.0-pre.1",
-    "can-observe-info": "^3.0.0-pre.1",
+    "can-observation": "^3.0.0-pre.0",
     "can-util": "^3.0.0-pre.21"
   },
   "devDependencies": {
