--- a/package.json
+++ b/package.json
@@ -54,15 +54,16 @@
   },
   "devDependencies": {
     "bit-docs": "0.0.6",
-    "jshint": "^2.9.1",
+    "can-map-define": "^3.0.0-pre.2",
     "cssify": "^1.0.2",
+    "done-serve": "^0.2.0",
+    "donejs-cli": "^0.9.5",
+    "generator-donejs": "^0.9.0",
+    "jshint": "^2.9.1",
     "steal": "^0.16.0",
     "steal-qunit": "^0.1.1",
     "steal-tools": "^0.16.0",
-    "testee": "^0.2.4",
-    "generator-donejs": "^0.9.0",
-    "donejs-cli": "^0.9.5",
-    "done-serve": "^0.2.0"
+    "testee": "^0.2.4"
   },
   "repository": {
     "type": "git",
