--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "can-construct": "^3.0.0-pre.8",
-    "can-event": "^3.0.0-pre.9",
-    "can-map": "^3.0.0-pre.9",
-    "can-observation": "^3.0.0-pre.11",
-    "can-util": "^3.0.0-pre.36"
+    "can-construct": "^3.0.0",
+    "can-event": "^3.0.1",
+    "can-map": "^3.0.1",
+    "can-observation": "^3.0.1",
+    "can-util": "^3.0.1"
   },
   "devDependencies": {
     "bit-docs": "0.0.6",
