--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "bit-docs": "0.0.7",
-    "can-map-define": "^3.0.0-pre.2",
+    "can-map-define": "^3.0.2",
     "done-serve": "^0.2.0",
     "donejs-cli": "^0.9.5",
     "generator-donejs": "^0.9.0",
