--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can-list",
-  "version": "3.0.3",
+  "version": "3.0.4-pre.0",
   "description": "Observable lists",
   "homepage": "http://canjs.com",
   "author": {
@@ -11,17 +11,17 @@
   "scripts": {
     "preversion": "npm test && npm run build",
     "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
-    "postversion": "git push --tags && git checkout master && git branch -D release && git push",
+    "postversion": "git push --tags && git checkout can-reflect && git branch -D release && git push origin can-reflect",
     "testee": "testee test/test.html --browsers firefox",
     "test": "npm run jshint && npm run testee",
     "jshint": "jshint ./*.js --config",
+    "release:pre": "npm version prerelease && npm publish --tag pre",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
     "build": "node build.js",
     "document": "bit-docs",
-    "develop": "done-serve --static --develop --port 8080",
-    "release:pre": "npm version prerelease && npm publish"
+    "develop": "done-serve --static --develop --port 8080"
   },
   "main": "can-list",
   "keywords": [
@@ -39,15 +39,14 @@
     "can-cid": "^1.0.0",
     "can-construct": "^3.0.0",
     "can-event": "^3.0.1",
-    "can-map": "^3.0.1",
+    "can-map": "^3.0.7-pre.1",
     "can-namespace": "1.0.0",
-    "can-observation": "^3.0.1",
+    "can-observation": "^3.2.0-pre.3",
     "can-types": "^1.0.1",
     "can-util": "^3.1.1"
   },
   "devDependencies": {
     "bit-docs": "0.0.7",
-    "can-map-define": "^3.0.2",
     "done-serve": "^0.2.0",
     "donejs-cli": "^0.9.5",
     "generator-donejs": "^0.9.0",
