--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "can-cid": "^1.0.0",
+    "can-compute": "^3.1.0-pre.6",
     "can-construct": "^3.0.0",
     "can-event": "^3.3.0",
     "can-map": "^3.1.0-pre.4",
