--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "can-map": "^3.1.0-pre.8",
     "can-namespace": "1.0.0",
     "can-observation": "^3.2.0-pre.9",
-    "can-reflect": "0.0.3",
-    "can-symbol": "0.0.3",
+    "can-reflect": "^1.0.0-pre.1",
+    "can-symbol": "^1.0.0-pre.0",
     "can-types": "^1.0.1",
     "can-util": "^3.1.1"
   },
