--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "can-reflect": "^1.0.0-pre.1",
     "can-symbol": "^1.0.0-pre.0",
     "can-types": "^1.0.1",
-    "can-util": "^3.2.2"
+    "can-util": "^3.9.0-pre.1"
   },
   "devDependencies": {
     "bit-docs": "0.0.7",
