--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "can-cid": "^1.0.0",
     "can-compute": "^3.1.0-pre.9",
-    "can-construct": "^3.0.0",
+    "can-construct": "^3.2.0-pre.0",
     "can-event": "^3.5.0-pre.2",
     "can-map": "^3.1.0-pre.10",
     "can-namespace": "1.0.0",
