--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "build": "node build.js"
+    "build": "node build.js",
+    "document": "bit-docs",
+    "develop": "done-serve --static --develop --port 8080"
   },
   "main": "can-list",
   "keywords": [
@@ -47,7 +49,10 @@
     "can-util": "^3.9.0-pre.1"
   },
   "devDependencies": {
+    "bit-docs": "0.0.7",
     "done-serve": "^0.2.0",
+    "donejs-cli": "^0.9.5",
+    "generator-donejs": "^0.9.0",
     "jshint": "^2.9.1",
     "steal": "^1.2.9",
     "steal-qunit": "^1.0.1",
