--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "build": "node build.js",
-    "document": "bit-docs"
+    "build": "node build.js"
   },
   "main": "can-list",
   "keywords": [
@@ -58,21 +57,5 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/canjs/can-list.git"
-  },
-  "bit-docs": {
-    "dependencies": {
-      "bit-docs-glob-finder": "^0.0.5",
-      "bit-docs-dev": "^0.0.3",
-      "bit-docs-js": "^0.0.3",
-      "bit-docs-generate-readme": "^0.0.8"
-    },
-    "glob": {
-      "pattern": "**/*.{js,md}",
-      "ignore": "node_modules/**/*"
-    },
-    "readme": {
-      "apis": "./docs/apis.json"
-    },
-    "parent": "can-list"
   }
 }
