--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
   "dependencies": {
     "can-cid": "^1.0.0",
     "can-compute": "^3.3.1",
-    "can-construct": "^3.2.0-pre.0",
+    "can-construct": "^3.2.0",
     "can-event": "^3.6.0",
     "can-map": "^3.3.1",
     "can-namespace": "1.0.0",
     "can-observation": "^3.3.1",
     "can-reflect": "^1.2.1",
-    "can-symbol": "^1.0.0-pre.0",
-    "can-types": "^1.1.0-pre.2",
-    "can-util": "^3.9.0-pre.1"
+    "can-symbol": "^1.0.0",
+    "can-types": "^1.1.0",
+    "can-util": "^3.9.0"
   },
   "devDependencies": {
     "jshint": "^2.9.1",
