--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "can-compute": "^3.3.1",
     "can-construct": "^3.2.0",
     "can-event": "^3.6.0",
-    "can-map": "^3.3.1",
+    "can-map": "^4.0.0-pre.0",
     "can-namespace": "1.0.0",
-    "can-observation": "^3.3.1",
-    "can-reflect": "^1.2.1",
-    "can-symbol": "^1.0.0",
-    "can-types": "^1.1.0",
-    "can-util": "^3.9.0"
+    "can-observation": "^4.0.0-pre.18",
+    "can-queues": "^0.2.8",
+    "can-reflect": "^1.7.2",
+    "can-symbol": "^1.4.1",
+    "can-types": "^1.1.3",
+    "can-util": "^3.10.12"
   },
   "devDependencies": {
     "detect-cyclic-packages": "^1.1.0",
