--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can-list",
-  "version": "3.2.1",
+  "version": "4.0.0-pre.0",
   "description": "Observable lists",
   "homepage": "http://canjs.com",
   "author": {
