--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can-list",
-  "version": "3.2.2",
+  "version": "4.0.0-pre.0",
   "description": "Observable lists",
   "homepage": "http://canjs.com",
   "author": {
@@ -9,9 +9,8 @@
     "url": "http://bitovi.com"
   },
   "scripts": {
-    "preversion": "npm test && npm run build",
-    "version": "git commit -am \"Update dist for release\" && git checkout -b release && git add -f dist/",
-    "postversion": "git push --tags && git checkout master && git branch -D release && git push",
+    "preversion": "npm test",
+    "postpublish": "git push --tags && git push",
     "testee": "testee test/test.html --browsers firefox",
     "test": "npm run detect-cycle && npm run jshint && npm run testee",
     "jshint": "jshint ./*.js --config",
@@ -19,7 +18,6 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "build": "node build.js",
     "detect-cycle": "detect-cyclic-packages --ignore done-serve"
   },
   "main": "can-list",
@@ -35,17 +33,21 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "can-cid": "^1.0.0",
-    "can-compute": "^3.3.1",
-    "can-construct": "^3.2.0",
-    "can-event": "^3.6.0",
-    "can-map": "^3.3.1",
-    "can-namespace": "1.0.0",
-    "can-observation": "^3.3.1",
-    "can-reflect": "^1.2.1",
-    "can-symbol": "^1.0.0",
+    "can-cid": "^1.1.2",
+    "can-construct": "^3.2.1",
+    "can-event-queue": "<2.0.0",
+    "can-namespace": "^1.0.0",
+    "can-observation-recorder": "<2.0.0",
+    "can-observation": "^4.0.0-pre.19",
+    "can-reflect": "^1.7.2",
+    "can-simple-observable": "^2.0.0-pre.16",
+    "can-stache-key": "^1.0.0-pre.9",
+    "can-symbol": "^1.4.1",
     "can-types": "^1.1.0",
-    "can-util": "^3.9.0"
+    "can-util": "^3.10.12",
+    "can-compute": "^4.0.0-pre.1",
+    "can-queues": "<2.0.0",
+    "can-map": "^4.0.0-pre.0"
   },
   "devDependencies": {
     "detect-cyclic-packages": "^1.1.0",
